# AIDA

./: CMakeLists.txt  README.md  aida.cpp  aida.hpp  aida_interface.hpp  generate_decompositions.cpp  hn_filtration.cpp  hn_filtration.hpp  use_hn_on_folder.cpp  visualise_posets.py
persistence_algebra/: CMakeLists.txt  aida.cpp  aida.hpp  aida_interface.hpp  brute_force_mpm_decomposition.cpp  concept_test  concept_test.cpp  count.py  degreeList.csv  edgesAfterReduction.csv  edgesBeforeReduction.csv  generate_decompositions  generate_decompositions.cpp  methods_and_structures  methods_and_structures.cpp  ordered_sets.cpp  output_graph.dot  presentation_to_quiver_new  presentation_to_quiver_new.cpp  runtime_statistics_for_pres_to_quiver.txt  vectorspace_decompositions  visualise_posets.py
persistence_algebra/graded_linear_algebra/include/grlina/: dense_matrix.hpp  graded_linalg.hpp  graded_matrix.hpp  inheritence_test.hpp  matrix_base.hpp  orders_and_graphs.hpp  r2graded_matrix.hpp  r3graded_matrix.hpp  sparse_matrix.hpp
persistence_algebra/tests/: generate_decompositions_test.cpp  graded_matrix_test.cpp
tests/: graded_matrix_test.cpp
